# faction

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
inc/faction/: result.h
inc/faction/renderer/: renderer.h  setup.h  vk_device.h  vk_instance.h  window.h
inc/faction/utils/: darray.h
src/: main.c  result.c
src/renderer/: renderer.c  setup.c  vk_device.c  vk_instance.c  window.c
src/utils/: darray.c
